--- a/src/view/TelaInicial.form
+++ b/src/view/TelaInicial.form
@@ -125,6 +125,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Verificar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVerificarActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
